[gd_scene load_steps=12 format=3 uid="uid://dxj0vv0f8wb7u"]

[ext_resource type="Script" uid="uid://jggugre4rngi" path="res://GameData/Baddies/Scripts/baddy.gd" id="1_hmxh2"]
[ext_resource type="Script" uid="uid://citwba61de3ku" path="res://GameData/Baddies/Scripts/baddy_stats.gd" id="2_lgoor"]
[ext_resource type="Shader" uid="uid://ckb62mi0oiuj" path="res://GameData/Baddies/Scripts/hit_flash.tres" id="3_ibbxf"]
[ext_resource type="Texture2D" uid="uid://h5rkew62e1t4" path="res://Assets/Baddies/tank_red.png" id="4_hmxh2"]
[ext_resource type="Texture2D" uid="uid://b4p4546v03cif" path="res://Assets/UI/HPbar.jpg" id="5_tgoi0"]

[sub_resource type="Resource" id="Resource_tji8d"]
resource_local_to_scene = true
script = ExtResource("2_lgoor")
spawns_per_wave = 10
spawn_interval = 0.5
base_max_health = 100.0
base_damage = 21.0
base_move_speed = 150.0
metadata/_custom_type_script = "uid://citwba61de3ku"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7b3mk"]
size = Vector2(42, 42)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_44shp"]
resource_local_to_scene = true
shader = ExtResource("3_ibbxf")
shader_parameter/enabled = false
shader_parameter/tint = Color(18.328726, 18.328726, 18.328726, 1)

[sub_resource type="Animation" id="Animation_pgc68"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:material:shader_parameter/enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_kdlqi"]
resource_name = "hit_flash"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:material:shader_parameter/enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8x5kb"]
_data = {
&"RESET": SubResource("Animation_pgc68"),
&"hit_flash": SubResource("Animation_kdlqi")
}

[node name="RedTank" type="PathFollow2D"]
loop = false
script = ExtResource("1_hmxh2")
data = SubResource("Resource_tji8d")

[node name="CharacterBody2D" type="CharacterBody2D" parent="." groups=["baddies"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D"]
shape = SubResource("RectangleShape2D_7b3mk")
debug_color = Color(0, 0.6, 0.7, 0.42)

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_44shp")
texture = ExtResource("4_hmxh2")

[node name="HealthBar" type="TextureProgressBar" parent="."]
offset_left = -30.0
offset_top = -30.0
offset_right = 30.0
offset_bottom = -24.0
value = 50.0
nine_patch_stretch = true
texture_under = ExtResource("5_tgoi0")
texture_progress = ExtResource("5_tgoi0")
tint_under = Color(0.207843, 0.207843, 0.207843, 1)
tint_progress = Color(3.60981e-06, 0.629484, 0, 1)

[node name="Impact" type="Marker2D" parent="."]
position = Vector2(-15, -15)

[node name="DamageNumberOrigin" type="Marker2D" parent="."]

[node name="HitFlashAnimation" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_8x5kb")
}
